# kairos-okr-roadmap

./: .vercelignore  BRAND-GUIDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  KAIROS_OKRS_2025.md  KairOS-Contributor-Readiness-PRD.md  LICENSE  OKR-ROADMAP-SETUP.md  PRODUCTION_VERIFICATION.md  PROFILE_SYSTEM_ANALYSIS.md  README-roadmap-deployment.md  README.DECENTRALIZED-ARCHITECTURE.md  README.IPFS-EXPLANATION.md  README.NFC-SETUP.md  README.SECURITY.md  README.dev.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SETUP.md  TODAY-PRIORITY-TASKS.md  TODAYS-PROGRESS-SUMMARY.md  WALLET_SETUP.md  kairos-okr-data.csv  middleware.ts  next.config.mjs  okr-roadmap.html  okrs.yml  package-lock.json  package.json  pnpm-lock.yaml  sync-roadmap.js  tailwind.config.ts  temp.json  test_real.json  tsconfig.json  vercel.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  pull_request_template.md
.taskmaster/: config.json
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
circuits/: README.md  bonding.circom
components/: ArtGalleryInterface.tsx  AudioTranscriptionDemo.tsx  ESP32WearableDevice.tsx  Header.tsx  InstallationGuide.tsx  MeldNodeCard.tsx  MomentList.tsx  Navigation.tsx  NillionAIDemo.tsx  PendantSelector.tsx  RitualControlPanel.tsx  WearableSection.tsx  display-box.tsx  email-form.tsx  moments-list.tsx  qr-code-display.tsx  tap-button.tsx  theme-provider.tsx  theme-toggle.tsx  wearable-device.tsx  wearable-display.tsx
docs/: ARCHITECTURE.md  BRAND_GUIDE.md  BRAND_GUIDE_SHAREABLE.md  CURRENT_IMPLEMENTATION.md  DATA_COMMONS_GRANT_CASE.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT_PERFORMANCE.md  DID_AUTH_COMPLIANCE_ROADMAP.md  DID_KEY_ARCHITECTURE_COMPLETE.md  HARDWARE.md  OKR_SYSTEM_GUIDE.md  OPTIMAL_DECENTRALIZED_ARCHITECTURE.md  P2P_IPFS_INTEGRATION_STATUS.md  P2P_IPFS_TECHNICAL_SPECIFICATION.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_READINESS.md  PROFESSIONAL_FEEDBACK_RESPONSE.md  PROJECT_STATUS.md  SECURITY.md  WEBAUTHN_PASSKEYS_COMPARISON.md
hooks/: useZKBonding.ts  useZKProofSystem.ts
lib/: crypto.ts  dev-performance.ts  hardwareAbstraction.ts  sampleInstallations.ts  types.ts  (+1 more)
src/wasm/: CMakeLists.txt  build.sh  post.js  pre.js
(+174 files in other folders)
